<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".FirstFragment">

    <ImageView
        android:id="@+id/img_love"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/pure_love"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/love_calculator"
        android:textColor="@color/pink"
        android:fontFamily="@font/pacifico"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/first_name"
        android:textColor="@color/red"
        android:fontFamily="@font/pacifico"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/pacifico"
        android:background="@drawable/btn_user"
        android:drawableStart="@drawable/ic_person"
        android:hint="@string/enter_first_name"
        android:paddingStart="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/second_name"
        android:fontFamily="@font/pacifico"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_second_name"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/pacifico"
        android:background="@drawable/btn_user"
        android:drawableStart="@drawable/ic_person"
        android:hint="@string/enter_second_name"
        android:paddingStart="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_send"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/pacifico"
        android:background="@drawable/btn_user"
        android:backgroundTint="@color/red"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_history"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:fontFamily="@font/pacifico"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_user"
        android:backgroundTint="@color/red"
        android:text="@string/history"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp" />


</LinearLayout>